source/blender/editors/sculpt_paint/paint_hide.c
@@ -403,6 +403,9 @@ static int hide_show_exec(bContext *C, wmOperator *op)
     BKE_mesh_flush_hidden_from_verts(me);
   }
 
+  SCULPT_visibility_sync_all_vertex_to_face_sets(ob->sculpt);
+
+  DEG_id_tag_update(&ob->id, ID_RECALC_SHADING);
   ED_region_tag_redraw(region);
 
   return OPERATOR_FINISHED;
